browser_selector: fix count word-wrap

--- a/app/modules/inventory/scss/_browser_selector.scss
+++ b/app/modules/inventory/scss/_browser_selector.scss
@@ -126,6 +126,7 @@
     .count{
       margin-left: auto;
       margin-right: 0.2em;
+      word-wrap: normal;
     }
   }
   .illustration{
